[package]
name = "zpaqlpy"
version = "0.1.0"
authors = ["Kai Lüke <kailueke@riseup.net>"]
build = "build.rs" # LALRPOP preprocessing
license = "GPL-3.0"
description = "zpaqlpy compiler"
readme = "README.md"

[dependencies]
clap = "2.21.2"
flexi_logger = "0.5.2"
log = "*"
regex = "0.2.1"

lalrpop-util = { git = "https://github.com/nikomatsakis/lalrpop.git" }

[build-dependencies.lalrpop]
git = "https://github.com/nikomatsakis/lalrpop.git"
